# youtube-video-summarizer

./: .env.example  .gitignore  01_acknowledgements.md  02_abstract.md  03_chapter1_introduction.md  04_chapter2_system_planning.md  05_chapter3_system_design.md  06_chapter4_implementation_testing.md  07_chapter5_conclusion.md  ARCHITECTURE.md  README.md  architecture_diagram.py  main.py  pyproject.toml  testing.ipynb
backend/: .env.example  check_models.py  main.py  pyproject.toml  requirements.txt  test_pipeline.py
backend/db/: mongodb.py
backend/models/: chat.py  user.py  video.py
backend/routes/: auth.py  chat.py  video.py
backend/services/: auth_service.py  chat_service.py  rag_service.py  retry_service.py  video_agent_service.py  video_service.py
backend/utils/: youtube_info_extractor.py  youtube_transcribe.py  youtube_url_parser.py
backend/worker/: main.py
docs/: 01_acknowledgements.md  04_chapter2_system_planning.md  05_chapter3_system_design.md  06_chapter4_implementation_testing.md  07_chapter5_conclusion.md  README_table_of_contents.md
frontend/: .env.example  README.md  auth.config.ts  auth.d.ts  env.d.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: apple-icon.tsx  globals.css  header.tsx  layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  forgot-password-form.tsx  login-form.tsx  logo.tsx  nav-chatlist.tsx  nav-main.tsx  nav-user.tsx  reset-password-form.tsx  signup-form.tsx  (+1 more)
utils/: youtube_analyzer.py  youtube_info_extractor.py  youtube_transcribe.py  youtube_url_parser.py
(+43 files in other folders)
